[project]
name = "Kabuda-Backend"
version = "0.1.0"
description = "Kabuda-Backend backend API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn>=0.34.0",
  "pydantic-settings>=2.7.1",
  "loguru>=0.7.3",
  "PyJWT>=2.10.1",
  "arrow>=1.3.0",
  "pydantic>=2.10.6",
  "authlib>=1.4.1",
  "httpx>=0.28.1",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.20",
  "asgi-correlation-id>=4.3.4",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.38",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "types-Authlib>=1.4.0.20241230",
  "ruff>=0.9.6",
  "alembic>=1.14.1",
  "psycopg2-binary>=2.9.10",
  "taplo>=0.9.3",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.ruff.lint]
extend-select = ["FAST", "I", "PL"]
